--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
+    "@types/react-redux": "^7.1.33",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
