--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    // "typeRoots": ["node_modules/@types"],
+    "types": ["@reduxjs/toolkit"]
   },
   "include": ["src", ".eslintrc.cjs"]
 }
